# imaips

./: CMakeLists.txt  LICENSE  README.md  build.bat  rebuild.bat
include/: UHCPlugin.h  registry.hpp
include/ps/: core.hpp  sps.hpp
src/: main.cpp  registry.cpp
src/ps/: core.cpp  sps.cpp
src/pugixml/: pugixml.cpp
